change some area. Ready to add the backend.

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                         <div class="panel-body pt-0">
                             <div class="row mb-4">
                                 <div class="col-sm-12">
-                                    <a href="order.html" class="btn btn-sm btn-primary pull-right ml-3">
+                                    <a href="order.html" class="btn btn-sm btn-danger pull-right ml-3">
                                         New Order
                                     </a>
-                                    <a href="manage-product.html" class="btn btn-sm btn-primary pull-right">
+                                    <a href="manage-product.html" class="btn btn-sm btn-danger pull-right">
                                         Manage Products
                                     </a>
                                 </div>
